--- a/src/components/accordion/style.css
+++ b/src/components/accordion/style.css
@@ -4,6 +4,16 @@
   width: 100vw;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+.wrapper button {
+  padding: 10px 20px;
+  background: black;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
 }
 .accordion {
   width: 700px;
